ext/spl/php_spl.h
@@ -63,13 +63,15 @@ PHP_MINFO_FUNCTION(spl);
 
 
 ZEND_BEGIN_MODULE_GLOBALS(spl)
-	char *       autoload_extensions;
-	HashTable *  autoload_functions;
-	int          autoload_running;
-	int          autoload_extensions_len;
-	intptr_t     hash_mask_handle;
-	intptr_t     hash_mask_handlers;
-	int          hash_mask_init;
+	char *			autoload_extensions;
+	HashTable *		autoload_functions;
+	int				autoload_running;
+	int				autoload_extensions_len;
+	intptr_t		hash_mask_handle;
+	intptr_t		hash_mask_handlers;
+	int				hash_mask_init;
+	zend_function	constr_wrapper_fun;
+	int				(*validating_fun)(void *object_data TSRMLS_DC);
 ZEND_END_MODULE_GLOBALS(spl)
 
 #ifdef ZTS
@@ -85,6 +87,8 @@ PHP_FUNCTION(class_parents);
 PHP_FUNCTION(class_implements);
 
 PHPAPI void php_spl_object_hash(zval *obj, char* md5str TSRMLS_DC);
+
+zend_function *php_spl_get_constructor_helper(zval *object, int (*validating_fun)(void *object_data TSRMLS_DC) TSRMLS_DC);
 
 #endif /* PHP_SPL_H */
 
